# libowlcpp

./: .gitignore  meson.build
include/owlcpp/rdf/: map_doc.hpp
io/: meson.build
io/headers/: raptor_to_store.hpp
logic/headers/: node_property_declaration.hpp  node_type_declaration.hpp
logic/lib/: meson.build  triple_to_fact.cc
logic/lib/factpp/: data_property.cc  data_range.cc  expression.cc  obj_property.cc  query_fact.cc
rdf/: meson.build
src/io/headers/: triple_store_temp.hpp
src/io/lib/: meson.build  raptor_wrapper.cc
src/libinfo/: meson.build
src/logic/: meson.build
src/logic/headers/: data_type.hpp  expression.hpp
src/logic/lib/factpp/: adaptor_triple.cc  data_instance.cc  data_type.cc  obj_type.cc
src/rdf/: meson.build
src/rdf/lib/: meson.build
src/rdf/test/: copy_triples_run.cc  id_tracker_run.cc  map_doc_run.cc  map_id_object_run.cc  map_node_iri_run.cc  map_node_run.cc  map_ns_run.cc  map_std_run.cc  map_triple_01_run.cc  map_triple_02_run.cc  member_iterator_run.cc  meson.build
