copy_triples_test = executable('copy_triples_test', 'copy_triples_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
id_tracker_test = executable('id_tracker_test', 'id_tracker_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
map_doc_test = executable('map_doc_test', 'map_doc_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
map_id_object_test = executable('map_id_object_test', 'map_id_object_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
map_node_iri_test = executable('map_node_iri_test', 'map_node_iri_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
map_node_test = executable('map_node_test', 'map_node_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
map_ns_test = executable('map_ns_test', 'map_ns_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
map_std_test = executable('map_std_test', 'map_std_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)
map_triple_01_test = executable('map_triple_01_test', 'map_triple_01_run.cc', include_directories: [inc, rdf_inc], link_with: rdf)

test('Copy triples', copy_triples_test)
test('ID tracker', id_tracker_test)
test('Map doc', map_doc_test)
test('Map ID object', map_id_object_test)
test('Mapd doc iri', map_node_iri_test)
test('Map doc', map_doc_test)
test('Map ns', map_ns_test)
test('Map std', map_std_test)
test('Map triple 01', map_triple_01_test)